
TODO:
	profile photo url



2013.7.8	K.L.	<k.l.lambda@gmail.com>

	+	ReaderGAE\Source\templates\View.html: user id from google user server added.

	>	ReaderGAE\Source\templates\View.html: replaced Chinese characters.


2013.7.7	K.L.	<k.l.lambda@gmail.com>

	+	ReaderGAE\Source\templates\View.html: created.


2013.3.25	K.L.	<k.l.lambda@gmail.com>

	+	ChangeLog.txt: created.


------------------------------------------------------- Reader ChangeLog -------------------------------------------------------